--- a/demo/plain/theme.css
+++ b/demo/plain/theme.css
@@ -29,7 +29,7 @@ Design v3 suggests.
 	 -- varies for each hue
 	 Default to near grayscale
 	*/
-	 --primary-chroma: 0.03;
+	--primary-chroma: 0.03;
 
 	--error-hue: 27.7;
 	--error-chroma: 0.193;
@@ -212,7 +212,7 @@ https://css-tricks.com/using-absolute-value-sign-rounding-and-modulo-in-css-toda
 
 	color: var(--c-on-surface);
 	background: var(--c-surface-container);
-	transition: background-color 1s;	
+	transition: background-color 1s;
 }
 
 
@@ -220,7 +220,7 @@ https://css-tricks.com/using-absolute-value-sign-rounding-and-modulo-in-css-toda
 
 
 
-input{
+:where(input) {
 	font-size: 1em;
 	line-height: var(--line-height);
 	padding: var(--padding);
@@ -229,39 +229,42 @@ input{
 	outline: var(--border-width) solid var(--outline-color);
 	background: var(--input-bg);
 	color: var(--input-ink);
+	width: 100%;
+	box-sizing: border-box;
 }
 
 input:hover {
-  outline-color: var(--hover-color);
+	outline-color: var(--hover-color);
 }
 
-input:active:hover{
-  outline-color: var(--active-color);
+input:active:hover {
+	outline-color: var(--active-color);
 }
 
 input:focus-visible {
-  outline: var(--border-width-focus) solid var(--focus-color);
+	outline: var(--border-width-focus) solid var(--focus-color);
 	outline-offset: 0;
 }
 
 
-input:disabled, input:active:disabled {
-  opacity: var(--disabled-opacity);
-  outline-color: var(--disabled-color);
+input:disabled,
+input:active:disabled {
+	opacity: var(--disabled-opacity);
+	outline-color: var(--disabled-color);
 }
 
-input[type="checkbox"]{
+input[type="checkbox"] {
 	display: grid;
 	place-content: center;
 	appearance: none;
 
-	/* line-height: 1; */
 	font-size: 1em;
 	width: calc(var(--line-height) *1em);
 	height: calc(var(--line-height) *1em);
-	margin: var(--padding);
+	margin: 0;
 }
-input[type="checkbox"]:focus-visible{
+
+input[type="checkbox"]:focus-visible {
 	outline-offset: 0.1875rem;
 }
 
@@ -275,16 +278,15 @@ input[type="checkbox"]::before {
 	font-size: calc(var(--line-height) *1em);
 }
 
-
 input[type="range"] {
 	cursor: pointer;
 	outline: none;
 }
 
 input[type="range"]:focus::-webkit-slider-thumb {
-  border: thin solid var(--focus-color);
-  outline: var(--border-width-focus) solid var(--focus-color);
-  outline-offset: .125rem;
+	border: thin solid var(--focus-color);
+	outline: var(--border-width-focus) solid var(--focus-color);
+	outline-offset: .125rem;
 }
 
 /*
