--- a/demo/plain/theme.css
+++ b/demo/plain/theme.css
@@ -218,7 +218,11 @@ https://css-tricks.com/using-absolute-value-sign-rounding-and-modulo-in-css-toda
 
 
 
+/* 
 
+Additional theming for input forms 
+
+*/
 
 :where(input) {
 	font-size: 1em;
